--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   badges: ^3.1.2
-  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   dio: ^5.3.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
 
 dev_dependencies:
