--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   badges: ^3.1.2
+  
   cupertino_icons: ^1.0.2
   dio: ^5.3.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
